# modified_array

./: .gitignore  .gitpod.yml  CMakeLists.txt  README.md  main.cpp  main.s  nd_array  test.c
.github/workflows/: c-cpp.yml
include/: cell.hpp  column_view.hpp  csv_reader.hpp  data_table.hpp  file_reader.hpp  md_utility.hpp  table_colview_common.hpp  tables.hpp
include/md_complex/: md_complex.hpp
include/md_dyn/: md_dyn_array.hpp  md_dyn_array.tcc  md_dyn_utility.hpp
include/md_static/: array_manipulation.hpp  fft.hpp  functions.hpp  linear_algebra.hpp  md_st_reference.hpp  md_static_arr_utility.hpp  md_static_array.hpp  md_static_array.tcc  md_static_array_op.hpp  md_static_array_utility.hpp  md_static_array_utility.tcc  md_static_mat_utility.hpp  md_static_reference.hpp  md_static_utility.hpp  md_static_utility.tcc  md_type_infer.hpp  md_type_inference.hpp  signal.hpp
include/md_static/array_manipulation/: eye.hpp  flip.hpp  mat_diag.hpp  md_array_manipulation.hpp  ones.hpp  pad.hpp  vandermonte.hpp  zeros.hpp
include/md_static/fft/: fft.hpp  fft2.hpp  fft3.hpp  fft_int.hpp  fftn.hpp  ifft.hpp  ifft2.hpp  ifft3.hpp  ifft_int.hpp  ifftn.hpp  md_fft.hpp
include/md_static/functions/: abs.hpp  accumulate_and_merge.hpp  amax.hpp  amin.hpp  arccos.hpp  (+50 more)
include/utility/: alloc.hpp  math.hpp  simd.hpp  static_checks.hpp
scripts/: build.sh  clean-build.sh
tests/: .gitignore  tests.hpp
tests/functions/: CMakeLists.txt
tests/md_complex/: CMakeLists.txt
tests/md_static/: CMakeLists.txt  array1d  array1d.cpp  array_op  array_operators.cpp  arraynd  arraynd.cpp
(+47 files in other folders)
